# HelloWX

./: CMakeLists.txt  README.md  main.cpp
mac/: mac_create_icns.sh  mac_setup.sh
ubuntu/: ubuntu_setup.sh
